Docker with lcpu

--- a/jibri/Dockerfile
+++ b/jibri/Dockerfile
@@ -49,6 +49,11 @@ COPY ./set-slave-pcm.sh /etc/chromium.d/set-slave-pcm.sh
 COPY ./jibri.jar /opt/jitsi/jibri/jibri.jar
 RUN chmod +x /etc/chromium.d/set-slave-pcm.sh
 #RUN sed -i '2i . /etc/chromium.d/set-slave-pcm.sh' /opt/google/chrome/google-chrome
+RUN sed -i '2i . /etc/chromium.d/set-slave-pcm.sh' /opt/google/chrome/google-chrome
+#RUN mv /usr/bin/ffmpeg /usr/bin/ffmpeg3
+#RUN chmod +x /usr/bin/ffmpeg2
+#RUN mv /usr/bin/ffmpeg2 /usr/bin/ffmpeg
+RUN chmod 777 -R /home/
 
 VOLUME /config
 
